fix horizontal scroll

--- a/src/views/HomeView/HomeView.module.css
+++ b/src/views/HomeView/HomeView.module.css
@@ -119,7 +119,7 @@
   padding-top: 4rem;
   align-items: flex-start;
   @media screen and (min-width: 768px) {
-    width: 1050px;
+    justify-content: space-between;
     flex-direction: row;
     column-gap: 4rem;
   }
